--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
 
 img {
     width: 100%;
+
+}
+
+p {
+    color: white;
+    font-size: 2rem;
 }
 
 
@@ -28,7 +34,7 @@ header {
     background-color: transparent;
     position: fixed;
     width: 100%;
-    z-index: 10000;
+    z-index: 4;
     height: 4rem;
     text-align: center;
     font-weight: 400;
@@ -156,7 +162,7 @@ header nav a {
     }
 
     .header ul {
-        padding-right: 530px;
+        padding-right: 500px;
         background-color: white;
     }
 
@@ -180,7 +186,7 @@ header nav a {
     }
 
 
-/*
+    /*
     .header .logo {
         float: left;
         position: relative;
@@ -194,3 +200,23 @@ header nav a {
 */
 
     /*---------Header design SLUT---------*/
+
+    #splash img {
+        /*                position: fixed;
+                */
+        opacity: 70%;
+    }
+
+
+    /*
+    .col_logo {
+        background-image: url(logo%20copy.png);
+        width: 50%;
+        height: 50%;
+        position: absolute;
+        background-size: cover;
+        top: 200px;
+        left: 350px;
+
+    }
+*/
