--- a/style.css
+++ b/style.css
@@ -13,14 +13,37 @@ body {
 
 img {
     width: 100%;
-
+    /*    position: relative;
+    */
 }
 
 p {
-    color: white;
-    font-size: 2rem;
+    color: black;
+    font-size: 1.3rem;
 }
 
+h1 {
+    font-family: 'Metal Mania', cursive;
+    color: black;
+    font-size: 2.5rem;
+    opacity: 100%;
+    letter-spacing: 1.8px;
+    position: relative;
+    text-align: center;
+    z-index: 2;
+    padding: 20px;
+}
+
+
+
+.sectionwrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section {
+    margin: auto;
+}
 
 /*---------Header design---------*/
 a {
@@ -36,7 +59,7 @@ header {
     width: 100%;
     z-index: 4;
     height: 4rem;
-    text-align: center;
+    text-align: right;
     font-weight: 400;
     font-size: 0.8rem;
 }
@@ -52,7 +75,7 @@ header nav a {
 }
 
 .header nav a:hover {
-    color: #A25F67;
+    color: lightgray;
 }
 
 .header ul {
@@ -60,7 +83,7 @@ header nav a {
     padding-right: 20px;
     list-style: none;
     overflow: hidden;
-    background-color: white;
+    background-color: transparent;
 }
 
 .header ul a {
@@ -151,14 +174,14 @@ header nav a {
     top: 0;
 }
 
-
-
+/*
 @media only screen and (min-width:800px) {
 
     .header {
         text-align: center;
         padding-right: 20vw;
         background-color: white;
+
     }
 
     .header ul {
@@ -183,10 +206,9 @@ header nav a {
 
     .header .menu-icon {
         display: none;
-    }
+    }*/
 
-
-    /*
+/*
     .header .logo {
         float: left;
         position: relative;
@@ -199,16 +221,68 @@ header nav a {
     }
 */
 
-    /*---------Header design SLUT---------*/
+/*---------Header design SLUT---------*/
 
-    #splash img {
-        /*                position: fixed;
-                */
-        opacity: 70%;
-    }
+#splash img {
+    /*        position: fixed;
+        */
+    /*        opacity: 70%;
+        */
+    z-index: 1;
+    margin: 0;
+}
 
 
-    /*
+#splash h1 {
+    font-family: 'Metal Mania', cursive;
+    color: black;
+    font-size: 5rem;
+    opacity: 100%;
+    letter-spacing: 1.8px;
+    position: absolute;
+    top: 200px;
+    left: 400px;
+    z-index: 2;
+}
+
+#splash p {
+    font-family: 'Roboto', sans-serif;
+    color: #A25F67;
+    font-size: 3.5rem;
+    opacity: 100%;
+    letter-spacing: 1.8px;
+    position: absolute;
+    top: 300px;
+    left: 800px;
+    z-index: 2;
+
+}
+
+/*
+
+#web {
+    max-width: 1200px;
+    background-color: #f1f1f1f1;
+}
+
+#web .sectionwrapper {
+
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+
+
+}
+
+#web .col {
+    flex-grow: 1;
+    flex-basis: 500px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 1rem;
+
+}
+
     .col_logo {
         background-image: url(logo%20copy.png);
         width: 50%;
@@ -220,3 +294,88 @@ header nav a {
 
     }
 */
+
+
+
+#books_site .sectionwrapper {
+    background-image: url(img/SVG/SVG/skewbooks.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 75px;
+
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+
+#books_site h1 {
+    top: -40px;
+}
+
+#books_site .menu-icon {}
+
+.scroll {
+    position: relative;
+    display: flex;
+    overflow: scroll;
+
+    align-items: flex-end;
+    top: -30px;
+
+}
+
+.scroll div img {
+
+    margin-top: 80px;
+    margin-right: 90px;
+    object-fit: cover;
+}
+
+
+
+
+
+
+.book_web img {
+    position: relative;
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+    box-shadow: 30px 15px 30px rgba(0, 0, 0, 0.5);
+    margin-left: 80px;
+
+}
+
+.book_ux img {
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+    box-shadow: 30px 15px 30px rgba(0, 0, 0, 0.5);
+
+}
+
+.book_ani img {
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+    box-shadow: 30px 15px 30px rgba(0, 0, 0, 0.5);
+
+}
+
+.book_indhold img {
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+    box-shadow: 30px 15px 30px rgba(0, 0, 0, 0.5);
+
+}
+
+.book_cv img {
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+    box-shadow: 30px 15px 30px rgba(0, 0, 0, 0.5);
+
+}
