--- a/style.css
+++ b/style.css
@@ -55,10 +55,23 @@ section {
     margin: auto;
 }
 
+
+
+
+.col_wide:hover {
+    filter: none;
+    -webkit-filter: grayscale(1, 0);
+    -webkit-transform: scale(1.01);
+}
+
 /*---------Header design---------*/
 a {
     visibility: visible;
     text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 1.1rem;
+    color: black;
 
 }
 
@@ -284,6 +297,14 @@ header nav a {
 
 }
 
+#scroll_front .sectionwrapper {
+    background-image: url(billeder/baggrund.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 75px;
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .scroll {
     position: relative;
@@ -292,6 +313,7 @@ header nav a {
 
     align-items: flex-end;
     top: -30px;
+
 
 }
 
@@ -369,9 +391,33 @@ header nav a {
     /*
     margin-left: 5px;
     margin-right: 5px;
+    padding: 1rem;
 */
-    /*    padding: 1rem;
-    */
+
+}
+
+#web .col_wide {
+    flex-grow: 1;
+    flex-basis: 500px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 1rem;
+
+}
+
+
+#web img {
+    filter: url(filters.svg#grayscale);
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(1);
+    /* Google Chrome & Safari 6+ */
+}
+
+#web img:hover {
+    filter: none;
+    -webkit-filter: none;
 }
 
 /*----------web site design slut------------*/
@@ -383,9 +429,7 @@ header nav a {
     background-color: white;
 }
 
-#ux_1 .col img {
-    width: 70%;
-}
+
 
 #ux_1 .sectionwrapper {
 
@@ -412,9 +456,7 @@ header nav a {
     background-color: white;
 }
 
-#ux_2 .col img {
-    width: 70%;
-}
+
 
 #ux_2 .sectionwrapper {
 
@@ -436,7 +478,39 @@ header nav a {
     */
 }
 
+
+#ux_1 img {
+    filter: url(filters.svg#grayscale);
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(1);
+    /* Google Chrome & Safari 6+ */
+}
+
+#ux_1 img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
+#ux_2 img {
+    filter: url(filters.svg#grayscale);
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(1);
+    /* Google Chrome & Safari 6+ */
+}
+
+#ux_2 img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
 /*---------UX site design slut------------*/
+
+/*--------Animation site design------------*/
+
 #ani_1 {
     max-width: 1200px;
     background-color: white;
@@ -493,4 +567,77 @@ header nav a {
 */
     /*    padding: 1rem;
     */
+}
+
+#ani_1 img {
+    filter: url(filters.svg#grayscale);
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(1);
+    /* Google Chrome & Safari 6+ */
+}
+
+#ani_1 img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
+#ani_2 img {
+    filter: url(filters.svg#grayscale);
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(1);
+    /* Google Chrome & Safari 6+ */
+}
+
+#ani_2 img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
+
+/*--------Animation site design slut------------*/
+
+
+
+#content_1 {
+    max-width: 1200px;
+    background-color: white;
+}
+
+#content_1 .col img {
+    width: 90%;
+}
+
+#content_1 .sectionwrapper {
+
+    display: flex;
+    flex-wrap: wrap-reverse;
+    /*    margin: 0 auto;
+    */
+
+}
+
+#content_1 .col {
+    flex-grow: 1;
+    flex-basis: 500px;
+    /*
+    margin-left: 5px;
+    margin-right: 5px;
+*/
+    /*    padding: 1rem;
+    */
+}
+
+#content_1 img {
+    filter: url(filters.svg#grayscale);
+    filter: gray;
+    -webkit-filter: grayscale(1);
+}
+
+#content_1 img:hover {
+    filter: none;
+    -webkit-filter: none;
 }
