--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
     font-size: 1.2rem;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
+    max-width: 400px;
 
 
 }
@@ -102,7 +103,6 @@ header {
 
 
 header nav a {
-
     font-size: 1.2rem;
     padding: 0.5rem;
     text-transform: uppercase;
@@ -129,18 +129,6 @@ header nav a {
 }
 
 .header ul a:hover {}
-
-
-
-/*
-.header .logo {
-    float: left;
-    position: relative;
-    background-image: url(img/logo/NW_Logo_big_1920px.jpg);
-    width: 5vw;
-    height: 3vw;
-}
-*/
 
 
 .header .menu {
@@ -263,10 +251,7 @@ header nav a {
 /*----------forside design------------*/
 
 #splash img {
-    /*        position: fixed;
-        */
-    /*        opacity: 70%;
-        */
+
     z-index: 1;
     margin: 0;
 }
@@ -388,73 +373,81 @@ header nav a {
 /*----------web site design------------*/
 
 
-
-
-
-.scroll_web {
-    background-image: url(billeder/SVG/baggrund_2.svg);
-    width: 100vw;
-    height: 55vw;
-    background-size: cover;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+#web_1 {
+    background-color: #DBDBDB;
 }
 
-.deathmetal {
-    flex-basis: 500px;
-    flex-grow: 1;
-    padding-left: 50px;
-    padding-top: 70px;
-
-}
-
-.deathmetal img {
+#web_1 img {
     width: 100%;
+    position: relative;
 }
 
-.deathmetal_2 {
-    flex-basis: 500px;
-    flex-grow: 1;
-    padding-right: 50px;
-    padding-top: 70px;
-    padding-left: 40px;
-
+#web_2 {
+    background-color: #DBDBDB;
 }
 
-/*
-#web {
-    max-width: 1200px;
-    background-color: white;
+#web_2 img {
+    width: 100%;
+    position: relative;
+}
 
-    background-image: url(billeder/SVG/baggrund_2.svg);
+#web_3 {
+    background-color: #DBDBDB;
+}
+
+#web_3 img {
+    width: 100%;
+    position: relative;
+}
+
+.baggrund_1 {
+    background-image: url(billeder/SVG/grey.svg);
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 70vw;
     background-size: cover;
 
 }
 
-#web .sectionwrapper {
-
+.baggrund_2 {
+    background-image: url(billeder/SVG/grey.svg);
     display: flex;
     flex-wrap: wrap;
+    width: 100vw;
+    height: 70vw;
+    background-size: cover;
 
 
 }
 
-#web .col {
-    flex-grow: 1;
-    flex-basis: 500px;
-
+.baggrund_3 {
+    background-image: url(billeder/SVG/grey.svg);
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 70vw;
+    background-size: cover;
 
 }
 
-#web .col_wide {
-    flex-grow: 1;
-    flex-basis: 500px;
-    margin-left: 5px;
-    margin-right: 5px;
-    padding: 1rem;
+.post_it {
+    padding-left: 200px;
+    padding-right: 300px;
+    padding-bottom: 300px;
+    z-index: 4;
+    position: relative;
 
-}*/
+}
+
+.text {
+    position: absolute;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    z-index: 5;
+
+}
 
 
 /*----------web site design slut------------*/
