--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ p {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     max-width: 550px;
-    /*    display: block;
-    */
+    display: block;
     line-height: 1.3;
 }
 
@@ -61,7 +60,31 @@ h3 {
 }
 
 
+.col {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
 
+    padding: 2vw;
+}
+
+.col img {
+    /*    padding: 19px;
+    */
+}
+
+.text {
+    color: #ddd;
+    background-color: white;
+    /*    padding: 50px 80px;
+    */
+    flex-grow: 1;
+    flex-basis: 300px;
+    padding: 1rem;
+    align-items: center;
+
+}
 
 
 .button {
@@ -91,18 +114,17 @@ video {
     height: auto;
 }
 
+/*----------Grunddesign slut----------*/
+
 /*------pil styling-----*/
 
+/*
 .wrap {
     height: 0%;
     width: 0%;
     text-align: left;
 }
 
-.scroll div img {
-    object-fit: cover;
-    cursor: ew-resize;
-}
 
 
 .wrap img {
@@ -154,9 +176,15 @@ video {
     100% {
         transform: translateY(0);
     }
-}
+}*/
 
 /*-------pil styling slut--------*/
+
+.scroll div img {
+    object-fit: cover;
+    cursor: ew-resize;
+}
+
 /*-------hr styling--------*/
 
 hr {
@@ -187,10 +215,14 @@ hr {
 }
 
 /*-------hr styling slut--------*/
+/*-------hide--------*/
+
 
 .hide {
     display: none;
 }
+
+/*-------hide slut--------*/
 
 /*---------Header design---------*/
 a {
@@ -313,9 +345,7 @@ header nav a {
     top: 0;
 }
 
-
 /*---------Header design SLUT---------*/
-
 
 /*----------forside design------------*/
 
@@ -379,47 +409,11 @@ header nav a {
 
 /*----------forside design slut------------*/
 
-/*----------web site design------------*/
-
-.col {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    /*    margin: 1vw;
-    */
-    padding: 2vw;
-}
-
-.col img {
-    /*    padding: 19px;
-    */
-}
-
-#ux_1 .col img {
-    padding: 19px;
-
-    width: 70%;
-}
-
-
-
-.text {
-    color: #ddd;
-    background-color: white;
-    /*    padding: 50px 80px;
-    */
-    flex-grow: 1;
-    flex-basis: 300px;
-    padding: 1rem;
-    align-items: center;
-
-}
+/*----------web design------------*/
 
 .parallax {
     background-image: url("billeder/SVG/ipad.svg");
-    width: 100%;
-    min-height: 200px;
+    min-height: 500px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -434,12 +428,19 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 60% 10%;
+    background-position: 65% 10%;
 
 }
 
 /*----------web site design slut------------*/
-/*---------UX site design------------*/
+/*---------UX design------------*/
+
+
+#ux_1 .col img {
+    padding: 19px;
+
+    width: 70%;
+}
 
 .parallax_3 {
     background-image: url("billeder/SVG/ipad_ux.svg");
@@ -462,11 +463,9 @@ header nav a {
 }
 
 
-/*---------UX site design slut------------*/
+/*---------UX design slut------------*/
 
-/*--------Animation site design------------*/
-
-
+/*--------Animation design------------*/
 
 .parallax_5 {
     background-image: url("billeder/SVG/computer%20kopi%202.svg");
@@ -475,7 +474,7 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /*    background-position: 29% 10%;*/
+    background-position: 29% 10%;
 }
 
 .parallax_6 {
@@ -488,9 +487,9 @@ header nav a {
     background-position: 70% 80%;
 }
 
-/*--------Animation site design slut------------*/
+/*--------Animation design slut------------*/
 
-/*--------content site design------------*/
+/*--------content design------------*/
 
 .parallax_7 {
     background-image: url("billeder/SVG/frontcom.svg");
@@ -538,9 +537,12 @@ header nav a {
 
 
 
-/*--------content site design slut------------*/
+/*--------content design slut------------*/
 
-/*--------CV site design------------*/
+/*--------CV design------------*/
+
+
+
 
 #cv ul {
     color: black;
@@ -554,29 +556,29 @@ header nav a {
 #cv .text_1 {
     color: #ddd;
     flex-grow: 1;
-    flex-basis: 600px;
-    align-items: center;
+    flex-basis: 300px;
 
 }
 
 
 #cv .text img {
     width: 50%;
-
-
 }
 
 #cv .text_2 p {
     max-width: 800px;
-    padding-left: 150px;
+    /*    padding-left: 150px;*/
+/*    text-align: center;
+    */    padding-bottom: 20px;
 }
 
 #cv .col_2 {
     color: #ddd;
-    flex-grow: 1;
-    flex-basis: 600px;
-    align-content: center;
+    display: flex;
+    flex-wrap: wrap;
     margin: 0;
+    justify-content: center;
+
 }
 
 .parallax_9 {
@@ -586,7 +588,8 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-        background-position: 30% 10%;}
+    background-position: 30% 10%;
+}
 
 
 .parallax_10 {
@@ -596,7 +599,8 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-        background-position: 40% 10%;}
+    background-position: 40% 10%;
+}
 
 .parallax_11 {
     background-image: url("billeder/cv_img/phineraunbranding-96.jpg");
@@ -605,7 +609,8 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-        background-position: 40% 10%;}
+    background-position: 40% 10%;
+}
 
 
 .parallax_12 {
@@ -615,24 +620,12 @@ header nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-        background-position: 0% 10%;
+    background-position: 0% 10%;
 }
-
-/*
-.parallax_13 {
-    background-image: url("billeder/cv_img/is.jpg");
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 80% 10%;
-}*/
-
-
 
 
 /*--------CV site design slut------------*/
+/*--------Footer design------------*/
 
 
 footer p {
@@ -660,6 +653,9 @@ footer .col {
     flex-basis: 300px;
     flex-grow: 1;
 }
+
+/*--------Footer design slut------------*/
+/*--------MEDIA QUERY------------*/
 
 
 @media only screen and (min-width:800px) {
@@ -788,6 +784,11 @@ footer .col {
         top: 0;
     }
 
+    #cv .col {
+        padding-left: 200px;
+        display: flex;
+        flex-wrap: wrap;
+    }
 
     .wrap {
         height: 100%;
@@ -953,7 +954,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 30% 10%;*/
+        background-position: 30% 10%;
     }
 
     .parallax_2 {
@@ -963,7 +964,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 60% 10%;*/
+        background-position: 60% 10%;
     }
 
     .parallax_3 {
@@ -973,7 +974,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 10% 10%;*/
+        background-position: 10% 10%;
 
     }
 
@@ -984,7 +985,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 30% 10%;*/
+        background-position: 30% 10%;
     }
 
     .parallax_5 {
@@ -994,7 +995,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 29% 10%;*/
+        background-position: 29% 10%;
     }
 
     .parallax_6 {
@@ -1004,7 +1005,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 70% 80%;*/
+        background-position: 70% 80%;
     }
 
     .parallax_7 {
@@ -1014,7 +1015,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 12% 10%;*/
+        background-position: 12% 10%;
     }
 
     .parallax_8 {
@@ -1024,7 +1025,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 5% 10%;*/
+        background-position: 5% 10%;
     }
 
     .parallax_9 {
@@ -1034,7 +1035,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 30% 10%;*/
+        background-position: 30% 10%;
     }
 
 
@@ -1045,7 +1046,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 40% 10%;*/
+        background-position: 40% 10%;
     }
 
     .parallax_11 {
@@ -1055,7 +1056,7 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 40% 10%;*/
+        background-position: 40% 10%;
     }
 
 
@@ -1066,7 +1067,8 @@ footer .col {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*    background-position: 0% 10%;
-    */
+        background-position: 0% 10%;
     }
 }
+
+/*--------MEDIA QUERY------------*/
